# RepoAuditor-AI

./: .env.example  .gitignore  AI Agent Explained.md  BUGFIX_DATETIME.md  BUGFIX_PR_CREATION.md  BUGFIX_SECURITY_SCANNER.md  CICD_GENERATOR.md  COMMAND_ROUTER.md  Commands.md  Dockerfile  EXPLAINER_AGENT.md  FEATURES.md  GITHUB_APP_SETUP.md  Github Webhook.md  HOW_CICD_WORKS.md  IMPLEMENTATION_COMPLETE.md  README.md  ROUTER_IMPLEMENTATION_SUMMARY.md  ROUTING_DEBUG_GUIDE.md  Setup Guide.md  TESTING_CICD_GENERATOR.md  TROUBLESHOOTING_WEBHOOKS.md  TROUBLESHOOTING_WEBHOOK_ERRORS.md  Testing Github and Agent.md  check_webhooks.py  diagnose_webhooks.py  docker-compose.yml  pyproject.toml  quick_test.py  start_server.bat  test_logging.py  test_router_manually.py  test_webhook_manually.py  verify_implementation.py
.claude/: settings.local.json
app/: config.py  main.py
app/agents/: __init__.py  base_agent.py  cicd_agent_wrapper.py  cicd_generator.py  code_reviewer.py  explainer.py  explainer_agent_wrapper.py  help_agent.py  review_agent_wrapper.py  state.py
app/commands/: __init__.py  parser.py  registry.py  router.py  router_instance.py
app/integrations/: gemini_client.py  github_auth.py  github_client.py  jira_client.py
app/models/: commands.py  jira_models.py  review_findings.py  webhook_events.py  workflow_states.py
app/prompts/: __init__.py  code_review_prompts.py  explainer_prompts.py
app/utils/: cache.py  code_fetcher.py  comment_formatter.py  decorators.py  finding_cache.py  helpers.py  jira_formatter.py  logger.py  project_detector.py  rate_limiter.py  retry.py
app/webhooks/: github.py  signature.py
app/workflows/: auto_fix_workflow.py  (+10 more)
docs/: Agent.md  Testing_Github.md
examples/: jira_usage_example.py
scripts/: check_server_status.py  clear_cache.py  dev.sh  setup.sh  test_jira_connection.py  verify_finding_cache.py
tests/: conftest.py
(+26 files in other folders)
